--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/View/Base.lproj/BTWalletManagerCell.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/View/Base.lproj/BTWalletManagerCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -32,8 +33,8 @@
                                 <color key="backgroundColor" red="0.85490196080000003" green="0.76862745099999996" blue="0.61568627450000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="2ih-wc-aXZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="w2I-EI-tLS" secondAttribute="trailing" constant="16" id="6Ka-TN-Pgb"/>
                                     <constraint firstItem="w2I-EI-tLS" firstAttribute="centerY" secondItem="E9M-nU-IP1" secondAttribute="centerY" id="KXq-3b-j4w"/>
-                                    <constraint firstAttribute="width" constant="60" id="o2e-aM-Pde"/>
                                     <constraint firstItem="w2I-EI-tLS" firstAttribute="leading" secondItem="E9M-nU-IP1" secondAttribute="leading" constant="10" id="z0M-wN-dLy"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
